--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,13 @@ services:
     deploy:
       placement:
         constraints: [node.role == manager]
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - /home/docker/data:/data
+    deploy:
+      placement:
+        constraints: [node.role == manager]
+    command: redis-server --appendonly yes
